1.增加给天奇的信和ppt展示背景音乐 2.修复ppt展示时间线内容 3.移除无用的html

--- a/src/main/webapp/WEB-INF/pages/cutscenes.html
+++ b/src/main/webapp/WEB-INF/pages/cutscenes.html
@@ -26,7 +26,7 @@
         init: function () {
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
-            S.UI.simulate("天奇|我是|你的老baby|欢迎来到你的专属领域|体会一下|程序员的浪漫|正在进入|#countdown 3|#time");
+            S.UI.simulate("天奇|我是|你的老baby|欢迎来到你的专属领域|体验一下|程序员的浪漫|正在进入|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
