--- a/src/main/webapp/WEB-INF/pages/fire.html
+++ b/src/main/webapp/WEB-INF/pages/fire.html
@@ -41,10 +41,10 @@
         爱你3000次
     </div>
     <div class="shape">
-        但为明烛
+        春风十里不如你
     </div>
     <div class="shape">
-        为汝之光
+        有你便是晴天
     </div>
     <div class="shape">
         长相思守
