--- a/src/main/webapp/WEB-INF/pages/openingtitle.html
+++ b/src/main/webapp/WEB-INF/pages/openingtitle.html
@@ -67,6 +67,10 @@
 <script src="/js/bvideo/bideo.js"></script>
 <script src="/js/bvideo/main.js"></script>
 
+<audio autoplay loop id="music">
+    <source src="/sound/BGM.mp3" />
+</audio>
+
 <script>
     setInterval("myInterval()", 12000);//1000Îª1ÃëÖÓ
     function myInterval() {
