--- a/src/main/webapp/WEB-INF/pages/pptshow.html
+++ b/src/main/webapp/WEB-INF/pages/pptshow.html
@@ -11,7 +11,7 @@
     <div class="ft-section section-1" data-id="section-1">
         <div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
             <p class="text1"><span id="text-75" contenteditable="true">爱是一种力量</span>, 让我们超越时空的维度感知它的存在!</p>
-            <p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开启故事线</span></p>
+            <p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开启故事模式</span></p>
         </div>
         <div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
             <p class="top-text" id="text-1" contenteditable="true">过去的他一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
@@ -32,29 +32,29 @@
             <img src="image/ppt/4.png" tppabs="image/ppt/4.png" alt="一个人去健身房"/>
         </div>
         <div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
-            <h2 class="center-text" id="text-5" contenteditable="true">一个人购物，无人与他拼单</h2>
+            <h2 class="center-text" id="text-5" contenteditable="true">一个人游走于五湖四海</h2>
             <img src="image/ppt/iali29.jpg" tppabs="image/ppt/iali29.jpg" alt="一个人购物，无人与我拼单"/>
         </div>
         <div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
-            <h3 id="text-6" contenteditable="true">但飞鸿依然乐观，自信，等待着属于他的幸福</h3>
+            <h3 id="text-6" contenteditable="true">但他依然乐观，自信，耐心的等待幸福来敲门</h3>
             <img src="image/ppt/iali60.jpg" tppabs="image/ppt/iali60.jpg" alt="但我依然乐观，自信，等待着属于我的幸福"/>
         </div>
         <div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
-            <h3 id="text-7" contenteditable="true">学习生活枯燥无味，天天cos滚刀肉</h3>
+            <h3 id="text-7" contenteditable="true">996学习生活枯燥无味</h3>
             <img src="image/ppt/iali51.jpg" tppabs="image/ppt/iali51.jpg" alt="学习生活枯燥无味，天天cos滚刀肉"/>
         </div>
         <div id="/section-2/page-5" class="ft-page page-9" data-id="page-5">
-            <h3 id="text-8" contenteditable="true">咬咬牙，也能捞回一点收获</h3>
+            <h3 id="text-8" contenteditable="true">但咬咬牙，收获也会给他一丝安慰</h3>
             <img src="image/ppt/iali5.jpg" tppabs="image/ppt/iali5.jpg"/>
         </div>
         <div id="/section-2/page-6" class="ft-page page-10" data-id="page-6">
-            <h3 id="text-9" contenteditable="true">圆满毕业，结束了学生生涯</h3>
+            <h3 id="text-9" contenteditable="true">终于圆满毕业，结束了学生生涯</h3>
             <img src="image/ppt/9.png" tppabs="image/ppt/9.png"/>
         </div>
     </div>
     <div class="ft-section section-3" data-id="section-3">
         <div id="/section-3/page-1" class="ft-page page-11" data-id="page-1">
-            <h3 id="text-10" contenteditable="true">正式成为社会人</h3>
+            <h3 id="text-10" contenteditable="true">他正式成为了社会人</h3>
             <img src="/image/ppt/10.png" tppabs="image/ppt/10.png" width="20%" height="60%"/>
         </div>
         <div id="/section-3/page-2" class="ft-page page-12" data-id="page-2">
@@ -65,41 +65,41 @@
         </div>
         <div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
             <img src="image/ppt/12.png" tppabs="image/ppt/12.png" alt='可是，我总是感觉缺点什么？哦~是爱情！'/>
-            <h3 id="text-13" contenteditable="true">可是，他总是感觉缺点什么？不是纸巾，是爱情！</h3>
+            <h3 id="text-13" contenteditable="true">每到夜深人静的时候，他总会感觉缺了点什么？不是纸巾，是爱情！</h3>
         </div>
         <div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
-            <h3 id="text-14" contenteditable="true">爱情在镜子里面吗？但飞鸿只看到了自己。</h3>
+            <h3 id="text-14" contenteditable="true">爱情在镜子里面吗？但他只看到了自己。</h3>
             <img src="image/ppt/13.png" tppabs="image/ppt/13.png"/>
         </div>
         <div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5">
             <h3><span id="text-15" contenteditable="true">关键时刻有幸得到了小勇的眷顾，及时为他抛出了橄榄枝。</span><br/><span id="text-16"
-                                                                                                      contenteditable="true">小勇告诉他，幸福就在微信名片里~</span>
+                                                                                                      contenteditable="true">经小勇告知，幸福就在一个名叫"琪"的微信名片里~</span>
             </h3>
             <img src="image/ppt/14.png" tppabs="image/ppt/14.png"/>
         </div>
         <div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
-            <h3><span id="text-17" contenteditable="true">于是，他发起了好友请求。。</span><br/><span id="text-18"
-                                                                                         contenteditable="true">很幸运，没有被讨厌。</span>
+            <h3><span id="text-17" contenteditable="true">于是，他鼓足勇气发起了好友请求。。</span><br/><span id="text-18"
+                                                                                             contenteditable="true">很幸运，没有被讨厌。</span>
             </h3>
             <img src="image/ppt/15.png" tppabs="image/ppt/15.png"/>
         </div>
         <div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7">
-            <h3 id="text-19" contenteditable="true">在3个多月的网恋中，天奇给他买了好多礼物~</h3>
+            <h3 id="text-19" contenteditable="true">在3个多月的网恋过程中，天奇给他买了好多礼物~</h3>
             <img src="image/ppt/iali16.jpg" tppabs="image/ppt/iali16.jpg"/>
         </div>
     </div>
     <div class="ft-section section-4" data-id="section-4">
         <div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
-            <p class="text" id="text-20" contenteditable="true">6月10日，他们相遇了~飞鸿第一眼就爱上她了，她目测应该或许可能也对飞鸿有好感呢~</p>
+            <p class="text" id="text-20" contenteditable="true">6月10日，终于奔现了~他第一眼就爱上了天奇，天奇目测应该或许可能也对他有好感呢~</p>
             <img class="center-img" src="image/ppt/17.png" tppabs="image/ppt/17.png" style="width: 20%;height: 60%;padding-top: 200px"/>
         </div>
         <div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
-            <h3 id="text-21" contenteditable="true">可是，他母胎solo二十余载，根本不懂如何给她一个正式的表白。</h3>
+            <h3 id="text-21" contenteditable="true">可他母胎solo二十余载，根本不懂如何给天奇一个正式的表白。</h3>
             <img src="image/ppt/18.png" tppabs="image/ppt/18.png" width="35%" height="80%"/>
         </div>
         <div id="/section-4/page-3" class="ft-page left-img page-20" data-id="page-3">
-            <h3><span id="text-22" contenteditable="true">一度把兄弟一起拉来分享对策。</span><br>
-                <span id="text-22" contenteditable="true">但兄弟也是单身。。。所以表白就先欠着了</span>
+            <h3><span id="text-22" contenteditable="true">也曾一度把兄弟拉来分享对策。</span><br>
+                <span id="text-22" contenteditable="true">但这位兄弟也是单身。。。所以表白就一直拖欠</span>
             </h3>
             <img src="/image/ppt/19.png" tppabs="image/ppt/19.png" style="width: 20%;height: 50%">
         </div>
@@ -127,7 +127,7 @@
             <img src="image/ppt/24.png" tppabs="image/ppt/24.png"/>
         </div>
         <div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
-            <h3 id="text-29" contenteditable="true">在梦里，依然觉得她就在身边。</h3>
+            <h3 id="text-29" contenteditable="true">在梦里，他依然觉得天奇就在身边。</h3>
             <img src="image/ppt/25.png" tppabs="image/ppt/25.png" width="25%" height="80%"/>
         </div>
         <div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
@@ -135,61 +135,61 @@
             <img src="image/ppt/26.png" tppabs="image/ppt/26.png" width="25%" height="80%"/>
         </div>
         <div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
-            <h3 id="text-31" contenteditable="true">与她一起逛商场</h3>
+            <h3 id="text-31" contenteditable="true">与天奇一起逛商场</h3>
             <img src="image/ppt/27.png" tppabs="image/ppt/27.png" width="25%" height="60%"/>
         </div>
         <div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
-            <h3 id="text-32" contenteditable="true">与她一起变成吃货</h3>
+            <h3 id="text-32" contenteditable="true">与天奇一起变成吃货</h3>
             <img src="image/ppt/28.png" tppabs="image/ppt/28.png" width="25%" height="60%"/>
         </div>
         <div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
-            <h3 id="text-33" contenteditable="true">游玩上海，她比迪士尼的所有公主都漂亮。</h3>
+            <h3 id="text-33" contenteditable="true">游玩上海，他觉得天奇比迪士尼的所有公主都漂亮。</h3>
             <img src="image/ppt/29.png" tppabs="image/ppt/29.png"/>
         </div>
         <div id="/section-5/page-7" class="ft-page page-31 full-img" data-id="page-7">
-            <h3 id="text-34" contenteditable="true">虽然是酒店，但有她就是家。</h3>
+            <h3 id="text-34" contenteditable="true">入住的酒店，有她也就成了家。</h3>
             <img src="image/ppt/30.png" tppabs="image/ppt/30.png"/>
         </div>
     </div>
     <div class="ft-section section-6" data-id="section-6">
         <div id="/section-6/page-1" class="ft-page page-32" data-id="page-1">
-            <h3 id="text-35" contenteditable="true">辗转到了四川成都，迎来了辣椒的洗礼</h3>
+            <h3 id="text-35" contenteditable="true">辗转他们到了四川成都，迎来了辣椒的洗礼</h3>
             <img src="image/ppt/31.png" tppabs="image/ppt/31.png" width="20%" height="60%"/>
         </div>
         <div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2">
-            <h3 id="text-36" contenteditable="true">先来一份串串开胃</h3>
+            <h3 id="text-36" contenteditable="true">天奇每时每刻都想用串串开胃</h3>
             <img src="image/ppt/32.png" tppabs="image/ppt/32.png" width="30%" height="80%"/>
         </div>
         <div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
-            <h3 id="text-37" contenteditable="true">尝试挑战成都的火锅，结果被结结实实的上了一课</h3>
+            <h3 id="text-37" contenteditable="true">但在尝试挑战成都火锅时，被结结实实的上了一课</h3>
             <img src="image/ppt/33.png" tppabs="image/ppt/33.png"/>
         </div>
         <div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
-            <h3><span id="text-38" contenteditable="true">第一次感觉好踏实</span><br/><span id="text-39"
-                                                                                    contenteditable="true">原来自己有了家</span><br/><span
+            <h3><span id="text-38" contenteditable="true">他第一次感觉好踏实</span><br/><span id="text-39"
+                                                                                     contenteditable="true">原来自己有了家</span><br/><span
                     id="text-40" contenteditable="true">这感觉真好</span></h3>
             <img src="image/ppt/iali8.gif" tppabs="image/ppt/iali8.gif"/>
         </div>
         <div id="/section-6/page-5" class="ft-page page-36" data-id="page-5">
-            <h3 id="text-41" contenteditable="true">初登望月楼，在这里拍摄婚纱是当地风俗吗？</h3>
+            <h3 id="text-41" contenteditable="true">他们初登望月楼，竟意外发现这里是拍摄婚纱的圣地</h3>
             <img src="image/ppt/35.png" width="25%" height="80%" tppabs="image/ppt/35.png"/>
         </div>
         <div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6">
-            <h3 id="text-42" contenteditable="true">金沙遗址，梦开始的地方</h3>
+            <h3 id="text-42" contenteditable="true">与天奇携手参观金沙遗址，央视播出的镜头尽收眼底</h3>
             <img src="image/ppt/36.png" tppabs="image/ppt/36.png"/>
         </div>
         <div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
             <img src="image/ppt/37.png" tppabs="image/ppt/37.png"/>
-            <h3 id="text-43" contenteditable="true">小桥流水人家</h3>
+            <h3 id="text-43" contenteditable="true">看着这朴实无华的建模，突然感觉人间烟火竟然也可以这么美</h3>
         </div>
     </div>
     <div class="ft-section section-7" data-id="section-7">
         <div id="/section-7/page-1" class="ft-page page-39 left-img" data-id="page-1">
-            <h3 id="text-44" contenteditable="true">飞鸿觉得这个小人儿还挺俊的，想在上面打个眼儿给天奇当挂坠</h3>
+            <h3 id="text-44" contenteditable="true">这个小人儿挺俊，他有那么一瞬间想在上面打个眼儿给天奇当挂坠</h3>
             <img src="image/ppt/38.png" tppabs="image/ppt/38.png"/>
         </div>
         <div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
-            <h3 id="text-45" contenteditable="true">飞鸿同样觉得面具不错，勉强配得上天奇吧</h3>
+            <h3 id="text-45" contenteditable="true">他同样觉得面具不错，给天奇当个面膜也可以</h3>
             <img src="image/ppt/39.png" tppabs="image/ppt/39.png" width="20%" height="60%"/>
         </div>
         <div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
@@ -197,17 +197,17 @@
             <h3 id="text-46" contenteditable="true">终于看到头牌了，他认为这个贴在天奇电脑上应该跟苹果logo很搭</h3>
         </div>
         <div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-            <h3><span id="text-47" contenteditable="true">在成都的这几日，他发现了她几个隐藏的技能</span><br/><span id="text-48"
-                                                                                                contenteditable="true">饭量，胆量，当然还有。。额。酒量</span>
+            <h3><span id="text-47" contenteditable="true">在成都的这几日，他发现了天奇的几个隐藏技能</span><br/><span id="text-48"
+                                                                                                 contenteditable="true">饭量，胆量，当然还有。。额。酒量</span>
             </h3>
             <img src="image/ppt/iali69.jpg" tppabs="image/ppt/iali69.jpg"/>
         </div>
         <div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
             <img src="image/ppt/iali42.jpg" tppabs="image/ppt/iali42.jpg"/>
-            <h3 id="text-49" contenteditable="true">看到她对美食的渴望，飞鸿意识到学习厨艺是至关重要的</h3>
+            <h3 id="text-49" contenteditable="true">看到天奇对美食的渴望，他意识到学习厨艺是至关重要的</h3>
         </div>
         <div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
-            <h3><span id="text-50" contenteditable="true">爱她</span><br/><span id="text-51" contenteditable="true">就先从做饭开始</span>
+            <h3><span id="text-50" contenteditable="true">爱天奇</span><br/><span id="text-51" contenteditable="true">就得先从做饭开始</span>
             </h3>
             <img src="image/ppt/iali0.jpg" tppabs="image/ppt/iali0.jpg"/>
         </div>
@@ -235,44 +235,44 @@
                 <span id="text-59" contenteditable="true">只是在这里</span>
                 <span id="text-59" contenteditable="true">听不到城市的喧嚣</span>
                 <span id="text-60" contenteditable="true">看不到职场的内卷</span>
-                <span id="text-61" contenteditable="true">只体会到了“陋室铭”</span></h3>
+                <span id="text-61" contenteditable="true">只体会到了“陋室”</span></h3>
 
         </div>
         <div id="/section-8/page-3" class="ft-page page-48 left-img" data-id="page-3">
-            <p><span id="text-62" contenteditable="true">来到这里不是为了贪图安逸</span><br/><span id="text-63"
-                                                                                       contenteditable="true">而是寻求一个给她幸福的机会</span>
+            <p><span id="text-62" contenteditable="true">他很清醒来这里不是为了贪图安逸</span><br/><span id="text-63"
+                                                                                          contenteditable="true">而是寻求一个给她幸福的机会</span>
             </p>
             <img src="image/ppt/47.png" tppabs="image/ppt/47.png"/>
         </div>
         <div id="/section-8/page-4" class="ft-page page-49" data-id="page-4">
             <p class="text">
-                <span id="text-64" contenteditable="true">她不远千里来看我</span><br/>
+                <span id="text-64" contenteditable="true">天奇不远千里来看他</span><br/>
                 <span id="text-65" contenteditable="true">苏州转上海再转柳州，花了一整天的时间</span>
             </p>
             <img src="image/ppt/48.png" tppabs="image/ppt/48.png" style="margin: auto" width="800px" height="1000px"/>
         </div>
         <div id="/section-8/page-5" class="ft-page page-50" data-id="page-5">
-            <p class='text' id="text-66" contenteditable="true">没有一线城市的繁华，总害怕她在这里会不开心</p>
+            <p class='text' id="text-66" contenteditable="true">这里没有一线城市的繁华，他总害怕天奇在这里会不开心</p>
             <img src="image/ppt/49.png" tppabs="image/ppt/49.png" width="40%" height="80%"/>
         </div>
         <div id="/section-8/page-6" class="ft-page page-51" data-id="page-6">
             <p>
-                <span id="text-67" contenteditable="true">来到了宜州，当然要看看学校啦</span><br/>
+                <span id="text-67" contenteditable="true">带着天奇逛逛学校</span><br/>
                 <span id="text-68" contenteditable="true">河池学院，又称"中国见桥大学"</span><br/>
-                <span id="text-69" contenteditable="true">你看这个龙江</span><br/>
-                <span id="text-70" contenteditable="true">它又宽又长</span>
+                <span id="text-69" contenteditable="true">面朝龙江</span><br/>
+                <span id="text-70" contenteditable="true">又宽又长</span>
             </p>
             <img src="image/ppt/50.png" tppabs="image/ppt/50.png" width="30%" height="70%"/>
         </div>
     </div>
     <div class="ft-section section-9" data-id="section-9">
         <div id="/section-9/page-1" class="ft-page page-52" data-id="page-1">
-            <h3 id="text-71" contenteditable="true">两人携手奔赴刘三姐故居</h3>
+            <h3 id="text-71" contenteditable="true">他们二人携手参观了刘三姐故居</h3>
             <img src="image/ppt/51.png" tppabs="image/ppt/51.png" width="1000px" height="700px"/>
         </div>
         <div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
             <img src="image/ppt/52.png" tppabs="image/ppt/52.png" width="30%" height="60%"/>
-            <h3 id="text-72" contenteditable="true">第一次与天奇共度中秋</h3>
+            <h3 id="text-72" contenteditable="true">共度了二人的第一个中秋</h3>
         </div>
         <div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3">
             <p class="text">
@@ -284,8 +284,8 @@
             <img src="image/ppt/54.png" tppabs="image/ppt/54.png"/>
             <p class="text">
                 <span id="text-73" contenteditable="true">他们的故事会一直继续下去。</span><br/>
-                <span id="text-74" contenteditable="true">收回时间线，我想大声说出来:</span><br/>
-                <span id="text-74" contenteditable="true">天奇，我爱你!</span><br/>
+                <span id="text-74" contenteditable="true">收回时间线，他的讯号仍然在宇宙中加密传递着</span><br/>
+                <span id="text-74" contenteditable="true">截取解码后的内容为：天奇，我爱你!</span><br/>
                 <br/>
                 <br/>
                 <span> -- 按“Esc"键有惊喜</span>
@@ -296,8 +296,9 @@
 <div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
 
 
-<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
-
+<audio autoplay loop id="music">
+    <source src="/sound/Perfect.mp3" />
+</audio>
 
 <script src="/js/jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 <script src="/js/ppt/all.min.js"></script>
