--- a/src/main/webapp/WEB-INF/pages/codeprint.html
+++ b/src/main/webapp/WEB-INF/pages/codeprint.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>芝加哥打字机</title>
+    <title>天奇专属打字机</title>
     <meta charset="GBK">
     <link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
     <link href="/css/declaration.css" type="text/css" rel="stylesheet">
@@ -215,6 +215,9 @@
     sleep(fun,20000);
 
 </script>
+<audio autoplay loop id="music">
+    <source src="/sound/galwaygirl.mp3" />
+</audio>
 </body>
 
 </html>
